Add migration and use local sql server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=MA-KESHAVARZ-L\\SQLEXPRESS;Database=Tweetbook2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-
-  "SwaggerOption" : { 
+  "SwaggerOption": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
-    "Description": "Our Api", 
+    "Description": "Our Api",
     "UIEndpoint": "v1/swagger.json"
   },
   "AllowedHosts": "*"
